# rddns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example_config.toml
.github/: main.workflow
.github/calculate-version/: Dockerfile  entrypoint.sh  test.sh
.github/extract-binary/: Dockerfile
.github/workflows/: build.yaml
src/: basic_auth_header.rs  command_line.rs  config.rs  main.rs  resolver.rs  resolver_derived.rs  resolver_interface.rs  server.rs  update_executer.rs  updater.rs
src/resolver/: mod.rs  resolver_derived.rs  resolver_interface.rs  resolver_parameter.rs  resolver_stun.rs
tests/: good_case.rs  server.rs  update.rs
tests/rddns_driver/: empty_config.toml  mod.rs  sample_config.toml
