[package]
name = "rddns"
version = "0.3.0"
authors = ["Raik Bieniek <dev@voidnode.de>"]
edition = "2021"

[dependencies]
hyper = {version = "0.14.26", features = ["server", "client"] }
hyper-rustls = "0.24.0"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["fs", "rt-multi-thread", "time"] }
toml = "0.4.10"
serde = "1.0.84"
serde_derive = "1.0.84"
regex = "1.1.0"
lazy_static = "1.2.0"
log = "0.4.6"
simplelog = "0.5.3"
clap = "2.32.0"
base64 = "0.10.0"
pnet = "0.22.0"
ipnetwork = "0.14.0"

[dev-dependencies]
tempdir = "0.3.7"
