[package]
name = "rddns"
version = "0.3.0"
authors = ["Raik Bieniek <dev@voidnode.de>"]
edition = "2021"

[dependencies]
hyper = {version = "0.14.26", features = ["server", "client"] }
hyper-rustls = "0.24.0"
rustls = "0.21.1"
webpki-roots = "0.23.1"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["fs", "rt-multi-thread", "time"] }
toml = "0.7.4"
serde = "1.0.163"
serde_derive = "1.0.163"
regex = "1.8.3"
lazy_static = "1.4.0"
log = "0.4.18"
simplelog = "0.12.1"
clap = { version = "4.3.0", features = ["cargo"] }
base64 = "0.21.2"
pnet = "0.33.0"
ipnetwork = "0.20.0"

[dev-dependencies]
tempdir = "0.3.7"
