[package]
name = "rddns"
version = "1.0.0"
authors = ["Raik Bieniek <dev@voidnode.de>"]
edition = "2021"

[dependencies]
hyper = {version = "0.14.26", features = ["server", "client"] }
hyper-rustls = "0.24.0"
rustls = {version = "0.21.1", features = ["dangerous_configuration"] }
webpki-roots = "0.25.2"
rustls-native-certs = "0.6.3"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["fs", "rt-multi-thread", "time"] }
toml = "0.7.4"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.113"
regex = "1.8.3"
lazy_static = "1.4.0"
log = "0.4.18"
simplelog = "0.12.1"
clap = { version = "4.3.0", features = ["cargo"] }
base64 = "0.21.2"
pnet = "0.33.0"
ipnetwork = "0.20.0"
cidr-utils = "0.5.10"
rustls-pemfile = "1.0.3"
stunclient = "0.4.0"

[dev-dependencies]
tempdir = "0.3.7"
